RMP - Home page content added and some spacing issue has been fixed

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: 'Inter', sans-serif;
+  margin-bottom: 80px;
 }
 
 header {
@@ -39,4 +40,19 @@ header {
 
 .post-comments {
   margin-top: 30px;
+}
+
+ul,
+ol {
+  margin: 15px 0 15px 20px;
+}
+
+.profile-pic {
+  max-width: 350px;
+  margin: 10px auto;
+  display: block;
+}
+
+img {
+  margin-top: 20px;
 }
